--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3178,10 +3178,33 @@ html, body {
   background-color: #FDFDFD;
   font-family: "Lato", sans-serif; }
 
+.right {
+  float: right; }
+
+.left {
+  float: left; }
+
 .tc {
   text-align: center; }
 
 .topnav {
   font-weight: bold; }
+  .topnav div a {
+    color: black; }
+  .topnav div a:hover {
+    padding: 5px 10px 5px 10px;
+    border: 3px solid black;
+    border-radius: 3px; }
+
+.hero-image {
+  background-color: lightgrey;
+  height: 300px;
+  margin-top: 50px;
+  margin-bottom: 200px; }
+
+.footer {
+  border-top: 3px solid black;
+  padding-top: 10px;
+  font-size: 9.5pt; }
 
 /*# sourceMappingURL=app.css.map */
