--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3190,10 +3190,10 @@ html, body {
 .topnav {
   font-weight: bold; }
   .topnav div a {
-    color: black; }
+    color: #151414; }
   .topnav div a:hover {
     padding: 5px 10px 5px 10px;
-    border: 3px solid black;
+    border: 3px solid #151414;
     border-radius: 3px; }
 
 .hero-image {
@@ -3203,7 +3203,7 @@ html, body {
   margin-bottom: 200px; }
 
 .footer {
-  border-top: 3px solid black;
+  border-top: 3px solid #151414;
   padding-top: 10px;
   font-size: 9.5pt; }
 
