--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3207,10 +3207,10 @@ html, body {
 .hero-image {
   background-color: lightgrey;
   height: 300px;
-  margin-top: 50px;
-  margin-bottom: 200px; }
+  margin-top: 50px; }
 
 .footer {
+  margin-top: 30px;
   border-top: 3px solid #151414;
   padding-top: 10px;
   font-size: 9.5pt; }
@@ -3220,5 +3220,16 @@ html, body {
   border-radius: 50%;
   width: 200px;
   height: 200px; }
+
+.latest-items {
+  margin-top: 30px; }
+
+.items {
+  margin-top: 10px; }
+
+.test-item {
+  background-color: red;
+  width: 250px;
+  height: 250px; }
 
 /*# sourceMappingURL=app.css.map */
