--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -58,13 +58,17 @@ html, body {
 }
 
 .hero-image {
-  background-color: lightgrey;
-  height: 300px;
   margin-top: 50px;
+
+  .h-image {
+    background-color: lightgrey;
+    height: 300px;
+  }
 }
 
 .footer {
   margin-top: 30px;
+  margin-bottom: 20px;
   border-top: 3px solid $main-black;
   padding-top: 10px;
   font-size: 9.5pt;
