--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -71,6 +71,8 @@ nav {
   a {
     color: $main-black;
     font-family: "Montserrat", sans-serif;
+    border: 3px solid white;
+    padding: 5px 10px 5px 10px;
   }
 
   a:hover {
