--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3710,18 +3710,13 @@ html, body {
     margin: auto;
     color: #151414; }
 
-.hero {
-  background: url("http://www.95wowgold.com/images/exceptional-shine-wedding-invitations-5-wedding-invitation-1200-x-900.jpg") 50%;
-  width: 1200px;
-  height: 400px;
-  margin-bottom: 50px; }
-
 .footer {
-  margin-top: 30px;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 50px;
   margin-bottom: 20px;
   border-top: 3px solid #151414;
   padding-top: 10px;
-  font-size: 9.5pt; }
+  font-size: 8pt; }
 
 nav {
   width: 1200px;
@@ -3746,7 +3741,49 @@ nav {
     color: #151414;
     border-radius: 3px;
     border: 3px solid #151414;
-    padding: 5px 10px 5px 10px; }
+    padding: 5px 10px 5px 10px;
+    -webkit-animation: shake .5s ease-in-out;
+    animation: shake .5s ease-in-out; }
+
+@-webkit-keyframes shake {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); }
+  20% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px); }
+  40% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px); }
+  60% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px); }
+  80% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px); }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); } }
+
+@keyframes shake {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); }
+  20% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px); }
+  40% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px); }
+  60% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px); }
+  80% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px); }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); } }
 
 .box-grid {
   width: 1200px;
@@ -3762,14 +3799,13 @@ nav {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -ms-flex-line-pack: stretch;
   -webkit-align-content: stretch;
+  -ms-flex-line-pack: stretch;
   align-content: stretch;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
   .box-grid .box {
-    background: lightgrey;
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -3779,16 +3815,28 @@ nav {
     -webkit-flex: 0 1 auto;
     -ms-flex: 0 1 auto;
     flex: 0 1 auto;
-    -ms-flex-item-align: auto;
     -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
     align-self: auto;
     padding: 20px;
-    border-radius: 5px; }
-    .box-grid .box p {
+    border-radius: 5px;
+    background: #f4f4f4; }
+    .box-grid .box h3 {
       display: block; }
+    .box-grid .box p {
+      color: #454545;
+      text-align: center; }
   .box-grid .box:first-child {
     margin-right: 20px; }
   .box-grid .box:last-child {
     margin-left: 20px; }
+
+#owl {
+  margin-bottom: 50px; }
+
+#owl .item img {
+  display: block;
+  width: 1200px;
+  height: 400px; }
 
 /*# sourceMappingURL=app.css.map */
