--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,6 +21,15 @@ html, body {
   line-height: 1.5;
 }
 
+h3,
+a:hover,
+a:visited,
+a:active,
+a {
+  text-decoration: none;
+  color: $main-black;
+}
+
 .right {
   float: right;
 }
@@ -77,7 +86,7 @@ nav {
     border-radius: 3px;
     border: 3px solid $main-orange;
     padding: 5px 10px 5px 10px;
-    animation: shake .5s ease-in-out;
+    animation: shake .6s ease-in-out;
   }
 }
 
@@ -172,7 +181,7 @@ nav {
   padding: 5px 10px 5px 10px;
   border: 3px solid $main-orange;
   border-radius: 3px;
-  animation: shake .5s ease-in-out;
+  animation: shake .6s ease-in-out;
 }
 
 .section {
