--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -86,7 +86,7 @@ nav {
     border-radius: 3px;
     border: 3px solid $main-orange;
     padding: 5px 10px 5px 10px;
-    animation: shake .6s ease-in-out;
+    //animation: shake .6s ease-in-out;
   }
 }
 
