--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3746,10 +3746,12 @@ nav {
     border: 3px solid white;
     padding: 5px 10px 5px 10px; }
   nav a:hover {
-    color: #ff4e5c;
+    color: #3b3b58;
     border-radius: 3px;
-    border: 3px solid #ff4e5c;
+    border: 3px solid #3b3b58;
     padding: 5px 10px 5px 10px;
+    -webkit-animation: shake .6s ease-in-out;
+    animation: shake .6s ease-in-out;
     }
 
 @-webkit-keyframes shake {
@@ -3845,8 +3847,7 @@ nav {
   padding: 5px 10px 5px 10px;
   border: 3px solid #ff4e5c;
   border-radius: 3px;
-  -webkit-animation: shake .6s ease-in-out;
-  animation: shake .6s ease-in-out; }
+   }
 
 .section {
   width: 800px;
