--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3719,12 +3719,11 @@ a {
     color: #3b3b58; }
 
 .footer {
-  font-family: "Montserrat", sans-serif;
   margin-top: 50px;
   margin-bottom: 20px;
   border-top: 3px solid #3b3b58;
   padding-top: 10px;
-  font-size: 8pt; }
+  font-size: 9pt; }
 
 nav {
   width: 1200px;
@@ -3746,12 +3745,10 @@ nav {
     border: 3px solid white;
     padding: 5px 10px 5px 10px; }
   nav a:hover {
-    color: #ff4e5c;
+    color: #3b3b58;
     border-radius: 3px;
-    border: 3px solid #ff4e5c;
-    padding: 5px 10px 5px 10px;
-    -webkit-animation: shake .6s ease-in-out;
-    animation: shake .6s ease-in-out; }
+    border: 3px solid #3b3b58;
+    padding: 5px 10px 5px 10px; }
 
 @-webkit-keyframes shake {
   0% {
@@ -3845,9 +3842,7 @@ nav {
   color: #ff4e5c;
   padding: 5px 10px 5px 10px;
   border: 3px solid #ff4e5c;
-  border-radius: 3px;
-  -webkit-animation: shake .6s ease-in-out;
-  animation: shake .6s ease-in-out; }
+  border-radius: 3px; }
 
 .section {
   width: 800px;
@@ -3864,5 +3859,24 @@ nav {
   display: block;
   text-align: center;
   margin: 0 5% 0; }
+
+.login-box {
+  margin: 0 auto 0 auto;
+  padding: 50px;
+  background: #f5f5f5;
+  border-radius: 3px;
+  font-family: "Merriweather", serif; }
+  .login-box label {
+    font-family: "Montserrat", sans-serif; }
+  .login-box button {
+    font-family: "Montserrat", sans-serif;
+    padding: 10px 10px 10px 10px;
+    border: 3px solid #3b3b58;
+    border-radius: 3px;
+    width: 100%;
+    margin-top: 20px; }
+  .login-box button:hover {
+    background: #3b3b58;
+    color: white; }
 
 /*# sourceMappingURL=app.css.map */
