--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -185,6 +185,10 @@ nav {
   border-radius: 3px;
 }
 
+.box__content:hover .bulb {
+  color: $main-orange;
+}
+
 .section {
   margin-bottom: 50px;
 }
@@ -201,7 +205,6 @@ nav {
 .section__intro {
   display: block;
   text-align: center;
-  margin: 0 5% 0;
 }
 
 
