--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -242,3 +242,12 @@ nav {
   border-radius: 4px;
   background: #fafafa;
 }
+
+.btnmrg {
+  margin-top: 25px;
+  padding-bottom: 11px;
+}
+
+.panel-blue {
+  background: #bee5ff;
+}
